--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mathjs": "^14.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.5.0",
     "react-webcam": "^7.2.0"
   },
   "devDependencies": {
